tests/snapshots/generate_tree__bin__fail__workspace_single_package_lib_target.snap
---
source: tests/generate_tree.rs
expression: output

---
STDERR:
Error: No binary target found with name "foobar".

Targets present in package:
- package_lib_target (--lib)


STDOUT:

